@@ -37,6 +37,7 @@
                 <configuration>
                     <argLine>
                         @{argLine}
+                        --add-opens rxmicro.resource/io.rxmicro.resource=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
